bugsink/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bugsink
spec:
  selector:
    app: bugsink
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
