bugsink/kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-domain
spec:
  redirectRegex:
    regex: ^https?://bugsink.djnd.si/(.*)
    replacement: https://bugsink.danesjenovdan.si/${1}
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bugsink
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd,
      bugsink-redirect-domain@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - bugsink.djnd.si
        - bugsink.danesjenovdan.si
      secretName: bugsink-tls
  rules:
    - host: bugsink.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bugsink
                port:
                  number: 8000
    - host: bugsink.danesjenovdan.si
      http: *http_paths
